change checkout style.

--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
@@ -171,12 +171,12 @@
     #opc-sidebar > div.opc-block-summary > div > div.content.minicart-items {
         display: block !important;
     }
-    .opc-block-summary .items-in-cart.active>.title:after {
+    /* .opc-block-summary .items-in-cart.active>.title:after {
         display: none !important;
     }
     .opc-block-summary .items-in-cart>.title:after {
         display: none !important;
-    }
+    } */
     .opc-block-summary .items-in-cart>.title {
         padding: 20px 40px 16px 0 !important;
         cursor: unset;
@@ -334,6 +334,9 @@
     }
     #opc-sidebar > div.opc-block-summary > div {
         margin-bottom: 0;
+    }
+    .opc-block-summary .table-totals tbody .mark, .opc-block-summary .table-totals tfoot .mark {
+        text-align: left;
     }
     @media screen and (max-width: 768px) {
         #checkout .osc {
