--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/shipping.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/shipping.html
@@ -79,6 +79,11 @@
             </form>
             <!-- /ko -->
             <!-- ko ifnot: rates().length > 0 --><div class="no-quotes-block"><!-- ko i18n: 'Sorry, no quotes are available for this order at this time'--><!-- /ko --></div><!-- /ko -->
+
+            <div class="custom-style-shoppin-method">
+                See our
+                <a href="/shipping-policy">Shipping Policy</a>
+            </div>
         </div>
     </div>
 </div>
