--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -197,3 +197,184 @@
         }
     }
 }
+
+// custom style
+#checkoutSteps {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
+    background-color: unset;
+    box-shadow: unset;
+    box-shadow: unset;
+}
+#checkoutSteps input  {
+    border-radius: 4px !important; 
+    border: 1px solid #E1E1E1 !important;
+}
+#checkoutSteps select  {
+    border-radius: 4px !important; 
+    border: 1px solid #E1E1E1 !important;
+}
+.custom-checkout-style {
+    width: 100%;
+    background-color: #ffffff;
+    height: fit-content;
+}
+.custom-checkout-style-2 {
+    width: 100%;
+    background-color: unset;
+}
+#checkoutSteps > div:nth-child(2) > div > div:nth-child(1), #checkoutSteps > div:nth-child(2) > div > div:nth-child(2) {
+    padding: 0;
+    background: #ffffff;
+}
+#checkoutSteps > div:nth-child(2) > div > div:nth-child(1) {
+    margin-bottom: 24px;
+}
+#checkout-step-shipping_method {
+    padding: 0 20px;
+    padding-bottom: 20px;
+}
+.table-checkout-shipping-method tbody td {
+    padding: 0 0 12px 0;
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+}
+.custom-style-shoppin-method {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #333333;
+}
+.custom-style-shoppin-method a {
+    color: #155DA4;
+}
+.custom-checkout-style-3 {
+    width: 100%;
+    background-color: unset;
+    padding: 0;
+}
+.opc-block-summary {
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+}
+.one-step-checkout-wrapper .mp-4 .opc-block-summary {
+    padding: 0 !important;
+}
+.osc-place-order-block{
+    display: block;
+    float: none;
+    border: none;
+    padding: 20px !important;
+    background: #fff;
+}
+.osc-place-order-block .field-row label {
+    display: none !important;
+}
+#discount-form {
+    margin-top: 0;
+    display: flex;
+}
+.osc-place-order-block .actions-toolbar {
+    margin-top: 0 !important;
+}
+#discount-form > div.actions-toolbar > div > button{
+    border-radius: 4px;
+    height: 40px;
+}
+#checkout-review-table {
+    border: none;
+}
+.opc-block-summary .block.items-in-cart {
+    margin-bottom: 0 !important;
+    background: #ffff;
+    padding: 20px 20px 0 20px;
+}
+
+// .one-step-checkout-wrapper .mp-4 #checkout-review-table thead th, .one-step-checkout-wrapper .mp-4 #checkout-review-table tbody tr td, .one-step-checkout-wrapper .mp-4 #checkout-review-table tfoot tr td {
+//     padding-left: 0 !important;
+//     padding-right: 0 !important;
+// }
+// .one-step-checkout-wrapper .minicart-items-wrapper .product-item-detail {
+//     padding-left: 0;
+// }
+// .product-image-wrapper img {
+//     padding: 0;
+// }
+
+#checkout-step-payment {
+    padding-bottom: 20px;
+}
+.checkout-payment-method .payment-method-title {
+    border-top: none;
+    padding-top: 10px !important;
+}
+.stripe-icon-container.right {
+    display: inline-block;
+    float: none;
+    position: unset;
+    top: unset;
+    padding-top: 5px;
+}
+.stripe-elements-field {
+    padding: 5px 10px;
+} 
+.pf-credit-card:before {
+    content: "\f012";
+    position: absolute;
+    top: 3px;
+    left: 47px;
+}
+#card-details-label > span > span {
+    display: none;
+}
+.checkout-payment-method .payment-method-content .fieldset:not(:last-child) {
+    margin: 5px 0 0 0;
+}
+
+.opc-wrapper .step-content {
+    margin: 0;
+}
+.custom-checkout-style-address {
+    padding: 0;
+}
+#checkout-step-shipping {
+    padding: 0 10px;
+    padding-bottom: 20px;
+}
+#shipping-new-address-form > fieldset > div > div.field._required > label {
+    display: none;
+}
+.opc-wrapper .form-login .fieldset .field .label, .opc-wrapper .form-shipping-address .fieldset .field .label {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+}
+.onestepcheckout-index-index .field.choice {
+    padding: 0 10px;
+}
+.field .control._with-tooltip input {
+    margin-right: 0;
+    width: 100%;
+}
+.field-tooltip .field-tooltip-action:before {
+    position: absolute;
+    top: -32px;
+    right: 0;
+}
+.opc-wrapper .create-account-block .fieldset .field .label {
+    display: inline-block;
+    font-style: normal;
+    font-weight: normal !important;
+    font-size: 14px;
+    line-height: 16px;
+    color: #333333;
+    margin-bottom: 8px;
+}
