--- a/app/code/Mageplaza/Osc/view/frontend/layout/onestepcheckout_index_index.xml
+++ b/app/code/Mageplaza/Osc/view/frontend/layout/onestepcheckout_index_index.xml
@@ -304,6 +304,11 @@
                                                 </item>
                                                 <item name="totals" xsi:type="array">
                                                     <item name="sortOrder" xsi:type="string">20</item>
+                                                     <item name="component" xsi:type="string">Magento_Checkout/js/view/summary/totals</item>
+                                                        <item name="displayArea" xsi:type="string">totals</item>
+                                                        <item name="config" xsi:type="array">
+                                                            <item name="template" xsi:type="string">Mageplaza_Osc/container/summary/totals</item>
+                                                        </item>
                                                     <item name="children" xsi:type="array">
                                                         <item name="before_grandtotal" xsi:type="array">
                                                             <item name="children" xsi:type="array">
@@ -314,6 +319,36 @@
                                                                         <item name="componentDisabled" xsi:type="helper" helper="Mageplaza\Osc\Helper\Data::isDisabledGiftWrap"/>
                                                                     </item>
                                                                 </item>
+                                                            </item>
+                                                        </item>
+                                                        <item name="subtotal" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Mageplaza_Osc/js/view/summary/subtotal</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="excludingTaxMessage" xsi:type="string" translate="true">Excl. Tax</item>
+                                                                <item name="includingTaxMessage" xsi:type="string" translate="true">Incl. Tax</item>
+                                                            </item>
+                                                        </item>
+                                                        <item name="shipping" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Mageplaza_Osc/js/view/summary/shipping</item>
+                                                            <item name="sortOrder" xsi:type="string">20</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="excludingTaxMessage" xsi:type="string" translate="true">Excl. Tax</item>
+                                                                <item name="includingTaxMessage" xsi:type="string" translate="true">Incl. Tax</item>
+                                                            </item>
+                                                        </item>
+                                                        <item name="tax" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Mageplaza_Osc/js/view/summary/tax</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="title" xsi:type="string" translate="true">Tax</item>
+                                                            </item>
+                                                        </item>
+                                                        <item name="grand-total" xsi:type="array">
+                                                            <item name="component" xsi:type="string">Mageplaza_Osc/js/view/summary/grand-total</item>
+                                                            <item name="config" xsi:type="array">
+                                                                <item name="exclTaxLabel" xsi:type="string" translate="true">Order Total Excl. Tax</item>
+                                                                <item name="inclTaxLabel" xsi:type="string" translate="true">Order Total Incl. Tax</item>
+                                                                <item name="basicCurrencyMessage" xsi:type="string" translate="true">You will be charged for</item>
+                                                                <item name="title" xsi:type="string" translate="true">Order Total</item>
                                                             </item>
                                                         </item>
                                                     </item>
