--- a/app/code/Mageplaza/Osc/view/frontend/web/template/3columns.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/3columns.html
@@ -34,9 +34,9 @@
 
 <div class="opc-wrapper one-step-checkout-wrapper">
     <div class="opc one-step-checkout-container" id="checkoutSteps">
-        <div class="col-mp mp-4 mp-sm-6 mp-xs-12 hoverable">
+        <div class="col-mp mp-4 mp-sm-6 mp-xs-12 hoverable custom-checkout-style">
             <div class="row-mp">
-                <div class="col-mp mp-12" data-bind="scope: 'checkout.steps.shipping-step.shippingAddress'">
+                <div class="col-mp mp-12 custom-checkout-style-address" data-bind="scope: 'checkout.steps.shipping-step.shippingAddress'">
                     <!-- ko template: getAddressTemplate() --><!-- /ko -->
                 </div>
                 <div class="col-mp mp-12" data-bind="scope: 'checkout.steps.shipping-step.billingAddress'">
@@ -45,7 +45,7 @@
                 <div class="mp-clear"></div>
             </div>
         </div>
-        <div class="col-mp mp-4 mp-sm-6 mp-xs-12">
+        <div class="col-mp mp-4 mp-sm-6 mp-xs-12 custom-checkout-style-2">
             <div class="row-mp">
                 <div class="col-mp mp-12 hoverable" data-bind="scope: 'checkout.steps.shipping-step'">
                     <!-- ko template: getTemplate() --><!-- /ko -->
@@ -56,7 +56,7 @@
                 <div class="mp-clear"></div>
             </div>
         </div>
-        <div class="col-mp mp-4 mp-sm-6 mp-xs-12" data-bind="scope: 'checkout.sidebar'">
+        <div class="col-mp mp-4 mp-sm-6 mp-xs-12 custom-checkout-style-3" data-bind="scope: 'checkout.sidebar'">
             <!-- ko template: getTemplate() --><!-- /ko -->
         </div>
         <div class="mp-clear"></div>
