--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/review/discount.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/review/discount.html
@@ -42,13 +42,13 @@
                 <div class="actions-toolbar">
                     <div class="primary">
                         <!-- ko ifnot: isApplied() -->
-                            <button class="action action-apply" type="submit" data-bind="'value': $t('Apply Discount'), click: apply">
-                                <span><!-- ko i18n: 'Apply Discount'--><!-- /ko --></span>
+                            <button class="action action-apply" type="submit" data-bind="'value': $t('Apply'), click: apply">
+                                <span><!-- ko i18n: 'Apply'--><!-- /ko --></span>
                             </button>
                         <!-- /ko -->
                         <!-- ko if: isApplied() -->
                             <button class="action action-cancel" type="submit" data-bind="'value': $t('Cancel'), click: cancel">
-                                <span><!-- ko i18n: 'Cancel coupon'--><!-- /ko --></span>
+                                <span><!-- ko i18n: 'Cancel'--><!-- /ko --></span>
                             </button>
                         <!-- /ko -->
                     </div>
