--- a/app/code/Mageplaza/Osc/view/frontend/templates/design.phtml
+++ b/app/code/Mageplaza/Osc/view/frontend/templates/design.phtml
@@ -60,8 +60,8 @@ $placeOrder = '#' . trim($design['place_order_button'], '#');
 
     .step-title {
         background-color: <?= $headingBackground ?>;
-        padding: 12px 10px 12px 12px !important;
-        font-weight: 600 !important;
+        padding: 12px 16px 12px 16px !important;
+        font-family: 'roboto-medium' !important;
         font-size: 16px !important;
         line-height: 19px !important;
         color: <?= $headingText ?> !important;
