--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
@@ -250,7 +250,7 @@
         }
 
         .methods-shipping {
-            .lib-css(border-bottom, @checkout-step-title__border);
+            border-bottom: none;
             padding-top: @indent__l;
         }
 
