change checkout style.

--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/summary/item/details.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/summary/item/details.html
@@ -177,6 +177,13 @@
         .opc-wrapper .step-content {
             margin: 0;
         }
+        #checkout-step-billing {
+            padding: 0 15px;
+            padding-bottom: 20px;
+        }
+        #create-account-form {
+            padding: 0 15px;
+        }
         .opc-wrapper .step-title {
             border-bottom: 1px solid #dbdbdb !important;
         }
