--- a/app/code/Mageplaza/Osc/view/frontend/web/template/container/summary/item/details.html
+++ b/app/code/Mageplaza/Osc/view/frontend/web/template/container/summary/item/details.html
@@ -150,6 +150,13 @@
         padding-top: 0;
         margin-top: 0;
     }
+        #checkout-step-shipping .action-show-popup {
+            margin-left: 10px;
+        }
+
+        #checkout-step-billing {
+            padding-bottom: 20px;
+        }
     @media screen and ( max-width: 768px ) {
         #checkoutSteps {
             grid-template-columns: repeat(1, 1fr);
@@ -256,6 +263,10 @@
         }
         .custom-checkout-style-3 {
             margin-top: 8px;
+        }
+        #checkout-step-shipping .action-show-popup {
+            margin-left: 5%;
+            width: 90%;
         }
     }
 </style>
